# android-ndk-sample

./: README.md  未命名绘图.drawio
MyApplicationC1/: settings.gradle
MyApplicationC1/app/: build.gradle
MyApplicationC1/app/src/androidTest/java/com/example/myapplicationc1/: ExampleInstrumentedTest.java
MyApplicationC1/app/src/main/: AndroidManifest.xml
MyApplicationC1/app/src/main/cpp/: CMakeLists.txt  common.h  native-lib.cpp
MyApplicationC1/app/src/main/java/com/example/myapplicationc1/: MainActivity.java
MyApplicationC1/app/src/main/res/values/: strings.xml
MyApplicationC1/gradle/wrapper/: gradle-wrapper.properties
mylib-sample/: CMakeLists.txt  build.sh
mylib-sample/src/: sample.c
